# auto-coder

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
src/auto_coder/: cli.py
src/auto_coder/agents/: coder.py  hypothesis.py  planner.py  reviewer.py
src/auto_coder/crews/: dev_crew.py
src/auto_coder/optimization/: feedback.py  optimizer.py
src/auto_coder/reflection/: manager.py
src/auto_coder/sophisticated/: context_manager.py  prompt_chain.py
src/auto_coder/tasks/: coding_tasks.py  hypothesis_tasks.py  planning_tasks.py
